# space55_old

./: .gitignore  Cargo.toml  Justfile  LICENSE  README.md
art/: btfly.blend  icon.ase  pot.blend  rock.blend  sprayer.blend  sprinkler.blend  tv.blend
assets/: pot.glb  rock.glb  sprayer.glb  sprinkler.glb  tv.glb
src/: browse.rs  browser.rs  conf.rs  data.rs  main.rs  save.rs  session.rs  term.rs
src/bufs/: edit.rs  img.rs  mod.rs  model.rs  music.rs  syntaxset.pack
src/bufs/syntaxes/: GLSL.sublime-syntax  Markdown.sublime-syntax  Rust.sublime-syntax
