# wengwengweng

[package]
name = "space55"
version = "0.0.0"
authors = ["tga <tga@enemyspy.xyz>"]
edition = "2018"
default-run = "space55"

[profile.release]
panic = "abort"

[dependencies]
dirty = { path = "../DIRTY" }
serde = { version = "1.0", features = [ "derive", ] }
rayon = "1.3"
syntect = "4.2"
dirs-next = "1.0"
once_cell = "1.2"
id3 = "0.5"
regex = "1.3"
git2 = "0.13"

